tests/fixtures/negative/path_assigned_twice.wrela
// expect: SEM0011: driver path serial_path is assigned to more than one executor
module negative.path_assigned_twice

driver path SerialWritePath { owner: ExecutorPlacement }

executor A {
    serial_path: SerialWritePath

    start fn run(self) -> never {
        while true {}
    }
}

executor B {
    serial_path: SerialWritePath

    start fn run(self) -> never {
        while true {}
    }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }

    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware {
        return hardware.exit_to_owned_hardware()
    }

    phase owned_hardware(hardware: OwnedHardware) -> never {
        let serial_path = SerialWritePath(owner = ExecutorPlacement(id = 0))
        let a = A(serial_path = serial_path)
        let b = B(serial_path = serial_path)
        a.run()
    }
}
